--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "next": "^15.1.3",
     "oslo": "^1.2.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^22.9.1",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
