--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lucide-react": "^0.474.0",
         "mongodb": "^6.12.0",
         "mongoose": "^8.9.3",
+        "motion": "^12.4.7",
         "next": "^14.2.24",
         "oslo": "^1.2.1",
         "react": "^18.3.1",
