--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dependencies": {
         "mongodb": "^6.11.0",
         "motion": "^12.4.3",
-        "next": "^14.2.24",
+        "next": "^15.2.2-canary.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
